KOGITO-113 Fix major issues reported by SonarCloud (#164)
* KOGITO-113 Fix Major SonarCloud reported problems, part 1

* KOGITO-113 Fix Major SonarCloud reported problems, part 1.5

* KOGITO-113 Fix major issues reported by SonarCloud part #2

* KOGITO-113 Formatting fix

* KOGITO-113 Fix traits

* KOGITO-113 Fix major issues reported by SonarCloud part #3

* KOGITO-113 Fix major issues reported by SonarCloud part #4

* KOGITO-113 Fix major issues reported by SonarCloud part #5

* KOGITO-113 Fix major issues reported by SonarCloud part #6

* KOGITO-113 Fix major issues reported by SonarCloud part #7

* KOGITO-113 Revert change from SonarCloud fixes